<resources>
    <string name="app_name">MyRating</string>
    <string name="tidak_puas">Tidak Puas</string>
    <string name="puas">Puas</string>
    <string name="sangat_puas">Puas</string>
    <string name="beri_penilaian_untuk_kami">Nilai Kami</string>
    <string name="terima_kasih_untuk_penilaian_anda">Terima kasih atas feedback anda</string>
    <string name="kembali">Kembali</string>
    <string name="selamat_datang_di_kpp_kebayoran_baru_2">"Selamat datang Di KPP Kebayoran Baru 2     Selamat datang Di KPP Kebayoran Baru 2     Selamat datang Di KPP Kebayoran Baru 2"</string>
    <string name="configuration">Konfigurasi</string>
    <string name="save">Simpan</string>
    <string name="cancel">Kembali</string>
    <string name="server_name">Server Name</string>
    <string name="username">Username</string>
    <string name="counter">Counter</string>
    <string name="image_main_dashboard">Image Main Dashboard</string>
</resources>