<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/purple_700"
    tools:context=".ConfigSetting">

    <TextView
        android:id="@+id/config_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_black"
        android:text="@string/configuration"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/server_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/poppins_black"
        android:text="@string/server_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/server_name"
        app:layout_constraintEnd_toStartOf="@id/server_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/config_label" />

    <EditText
        android:id="@+id/server_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_120sdp"
        android:background="@drawable/backgrounf_input"
        android:ellipsize="end"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLines="1"
        android:padding="@dimen/_4sdp"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/server_name_label"
        app:layout_constraintTop_toBottomOf="@+id/config_label" />


    <TextView
        android:id="@+id/username_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_black"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/username"
        app:layout_constraintEnd_toEndOf="@+id/server_name_label"
        app:layout_constraintStart_toStartOf="@+id/server_name_label"
        app:layout_constraintTop_toBottomOf="@id/server_name" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/backgrounf_input"
        android:ellipsize="end"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/_4sdp"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/server_name"
        app:layout_constraintStart_toStartOf="@+id/server_name"
        app:layout_constraintTop_toBottomOf="@+id/server_name" />

    <TextView
        android:id="@+id/counter_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_black"
        android:text="@string/counter"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/counter"
        app:layout_constraintEnd_toEndOf="@+id/server_name_label"
        app:layout_constraintStart_toStartOf="@+id/server_name_label"
        app:layout_constraintTop_toTopOf="@+id/counter" />

    <EditText
        android:id="@+id/counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/backgrounf_input"
        android:ellipsize="end"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLines="1"
        android:padding="@dimen/_4sdp"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/save_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/counter"
        app:layout_constraintStart_toStartOf="@+id/counter"
        app:layout_constraintTop_toBottomOf="@id/counter" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="@+id/counter_label"
        app:layout_constraintStart_toStartOf="@+id/counter_label"
        app:layout_constraintTop_toTopOf="@+id/save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>