<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rtlmrq="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/purple_700"
    tools:context=".view.main.MainActivity">

    <VideoView
        android:id="@+id/video_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_70sdp"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/running_text"
        app:layout_constraintEnd_toStartOf="@+id/not_satisfied"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:clickable="false"
        android:contentDescription="@string/image_main_dashboard"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/running_text"
        app:layout_constraintEnd_toStartOf="@+id/not_satisfied"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rating_label_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/poppins_black"
        android:text="@string/beri_penilaian_untuk_kami"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@+id/not_satisfied"
        app:layout_constraintStart_toStartOf="@+id/not_satisfied"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/very_satisfied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:clickable="true"
        android:elevation="@dimen/_20sdp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating_label_view">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/very_satisfied_label_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sangat_puas"
                android:textAlignment="center"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/very_satisfied_anim_view"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/not_satisfied"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:clickable="true"
        android:elevation="@dimen/_20sdp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/running_text"
        app:layout_constraintEnd_toEndOf="@+id/very_satisfied"
        app:layout_constraintStart_toStartOf="@+id/very_satisfied"
        app:layout_constraintTop_toBottomOf="@id/very_satisfied">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/not_satisfied_label_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tidak_puas"
                android:textAlignment="center"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/not_satisfied_anim_view"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <TextClock
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format12Hour="hh:mm:ss"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/not_satisfied"
        app:layout_constraintStart_toStartOf="@+id/not_satisfied"
        app:layout_constraintTop_toTopOf="@+id/running_text" />

    <TextView
        android:id="@+id/running_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorLink="@color/white"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/not_satisfied"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/very_satisfied"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>